<resources>
    <string name="app_name">Badminton Score Counter</string>
    <string name="new_game">New Game</string>
    <string name="singles_label">Singles</string>
    <string name="doubles_label">Doubles</string>
    <string name="enter_players_names">Enter Players Name</string>
    <string name="player1_label">Player 1 Name:</string>
    <string name="player2_label">Player 2 Name:</string>
    <string name="player1_default">Player 1</string>
    <string name="player2_default">Player 2</string>
    <string name="player3_default">Player 3</string>
    <string name="player4_default">Player 4</string>

    <string name="start_game_label">Start</string>
    <string name="swap_name_access">Swap player names</string>

    <string name="title_activity_game_session">Badminton Game Session</string>
    <string name="score_label">Score</string>
    <string name="vs_label">VS</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="SelectPlayerTitle">Select Player</string>
    <string name="view_label">View</string>
    <string name="players_label">Players</string>
    <string name="game_statistics_label">Game Statistics</string>
    <string name="title_activity_view_players">View Players</string>
    <string name="title_activity_game_statistics">View Game Statistics</string>
    <string name="undo_button_label">Undo</string>
    <string name="no_player_found_label">No Players found</string>
    <string name="take_photo_menu_item">Take Photo</string>
    <string name="choose_from_gallery_menu_item">Choose From Gallery</string>

</resources>
