<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_singles_players_names"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haojie.badmintonscorecounter.EnterSinglesPlayersNames">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="top"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp">

            <TextView
                android:text="@string/player1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/player1_default"
                android:ems="10"
                android:id="@+id/editText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/player2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/player2_default"
                android:ems="10"
                android:id="@+id/editText2" />


        </LinearLayout>
        <Button
            android:text="@string/start_game_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/button_start" />
    </FrameLayout>
</RelativeLayout>
