<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haojie.badmintonscorecounter.MainActivity">


    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/new_game"
        android:padding="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/singles_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_singles" />

        <Button
            android:text="@string/doubles_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_doubles" />
    </LinearLayout>
</RelativeLayout>
