<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_enter_doubles_players_names"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.haojie.badmintonscorecounter.EnterDoublesPlayersNamesActivity"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="top">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/swap_team1_button"
                        android:contentDescription="@string/swap_name_access"
                        app:srcCompat="@drawable/swap_button"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginStart="18dp">

                            <TextView
                                android:text="@string/team_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Material.Large"
                                android:textStyle="normal|bold"/>

                            <TextView
                            android:text="@string/player1_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:inputType="textPersonName"
                                    android:text="@string/player1_default"
                                    android:ems="10"
                                    android:id="@+id/editTeam1Player1Name" />
                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/take_photo1"
                                    app:srcCompat="@drawable/ic_take_photo"/>
                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/address_book1"
                                    app:srcCompat="@drawable/ic_action_name"/>
                            </LinearLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="10dp" />

                        <TextView
                            android:text="@string/player2_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="textPersonName"
                                android:text="@string/player2_default"
                                android:ems="10"
                                android:id="@+id/editTeam1Player2Name" />
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/take_photo2"
                                app:srcCompat="@drawable/ic_take_photo"/>
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/address_book2"
                                app:srcCompat="@drawable/ic_action_name"/>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/swap_teams_button"
                    android:contentDescription="@string/swap_name_access"
                    app:srcCompat="@drawable/swap_button"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="top">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/swap_team2_button"
                        android:contentDescription="@string/swap_name_access"
                        app:srcCompat="@drawable/swap_button"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginStart="18dp">

                        <TextView
                            android:text="@string/team_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Large"
                            android:textStyle="normal|bold"/>

                        <TextView
                            android:text="@string/player1_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="textPersonName"
                                android:text="@string/player3_default"
                                android:ems="10"
                                android:id="@+id/editTeam2Player1Name" />
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/take_photo3"
                                app:srcCompat="@drawable/ic_take_photo"/>
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/address_book3"
                                app:srcCompat="@drawable/ic_action_name"/>
                        </LinearLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="10dp" />

                        <TextView
                            android:text="@string/player2_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="textPersonName"
                                android:text="@string/player4_default"
                                android:ems="10"
                                android:id="@+id/editTeam2Player2Name" />
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/take_photo4"
                                app:srcCompat="@drawable/ic_take_photo"/>
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/address_book4"
                                app:srcCompat="@drawable/ic_action_name"/>
                        </LinearLayout>

                </LinearLayout>
                </LinearLayout>
                <Button
                    android:text="@string/start_game_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/button_start" />
            </LinearLayout>



</ScrollView>
